--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /*header*/
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -29,7 +29,7 @@ body {
     background-color: var(--background);
 }
 .header{
-    height: 151px;
+    height: 100px;
     width: 100%;
     padding: 0px 50px;
     display: flex;
@@ -48,6 +48,12 @@ body {
     text-decoration: none;
     color: var(--textwhite);
     font-weight: 500;
+}
+
+.navbar-home {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 
@@ -146,11 +152,9 @@ body {
 
 .recomendaciones-info{
     flex-direction: column;
-    gap: 10px;
+    gap: 8px;
     color: var(--textwhite);
     display: flex;
-    align-items: center;
-    justify-content: center;
     background: #3d3b3b;
 }
 
@@ -164,7 +168,7 @@ body {
 .recomendaciones-info p{
     font-size: 14px;
     font-weight: 400;
-    background: #3d3b3b;
+    opacity: 0.3;
 }
 
 .recomendaciones-info h4{
@@ -216,20 +220,19 @@ body {
 }
 
 .categoria-info{
-    width: 147px;
-    height: 171px;
     border-radius: 15px;
+    gap: 5px;
     background:#3d3b3b ;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 50px;
+    padding: 20px 20px 0px 20px;
 }
 
-.categoria-info img,
-h4{
-    background:#3d3b3b;
+.categoria-info-pizza {
+    padding: 7px;
 }
 
 .categ-barra{
